Wed Feb  6 13:35:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_method_entry_location, rb_{mod,obj}_method_location): new
	  functions to obtain source location of method definition.

	* vm_method.c (rb_obj_respond_to): show the location of old style
	  respond_to? method.

Wed Feb  6 13:03:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/security.rdoc: Add link to CVEs on ruby-lang.org/en/security

Wed Feb  6 12:49:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* NEWS: Add note about removal of CSV::load and CSV::dump from r39077

Wed Feb  6 05:57:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/racc/parser.rb: Hide copyright notice from Racc doc

Wed Feb  6 05:50:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/rubygems/*: Removed outdated documentation files
	* lib/rubygems/LICENSE.txt: Include license file
	* lib/rubygems.rb: Move Gem module documentation so rdoc can parse it
	  and link to LICENSE.txt
	* lib/rubygems/*: Hide useless documentation from Gem module rdoc

Wed Feb  6 03:45:19 2013  Zachary Scott  <zachary@zacharyscott.net>

	* doc/security.rdoc: Remove documentation for unsafe CSV.load which
	  was deleted in r39077

Wed Feb  6 03:27:19 2013  James Edward Gray II  <james@graysoftinc.com>

	* lib/csv.rb: Remove the dangerous serialization feature.

Wed Feb  6 00:56:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/irb.rb: Remove example from restrictions, it works [Github #246]
	  Based on patch by Ryunosuke SATO

Wed Feb  6 00:46:53 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (rb_vm_stack_to_heap): call rb_vm_get_binding_creatable_next_cfp
	  instead of rb_vm_get_ruby_level_next_cfp to prevent a segfault by
	  calling Kernel#callcc. See r39067 for more details.
	  [ruby-dev:46908] [ruby-trunk - Bug #7774]

	* test/ruby/test_settracefunc.rb: add a test.

Tue Feb  5 18:48:00 2013  Charlie Somerville  <charlie@charliesomerville.com>
