@@ -1,3 +1,9 @@
+Mon Feb  4 02:18:00 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* test/ruby/test_process.rb (test_setsid): skip when platform is
+	  OpenBSD. Contributed from George Koehler.
+	  [Bug #7789] [ruby-core:51889]
+
 Wed Feb  6 13:35:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* proc.c (rb_method_entry_location, rb_{mod,obj}_method_location): new
